k8s-manifests/setups/setup-angular-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "server-frontend-1-service"
  namespace: "backend"
  labels:
    app: "server-frontend-1"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: "server-frontend-1"
  type: "NodePort"
