k8s-manifests/setups/setup-angular.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "server-frontend"
  namespace: "backend"
  labels:
    app: "server-frontend"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "server-frontend"
  template:
    metadata:
      labels:
        app: "server-frontend"
    spec:
      containers:
      - name: "project-frontend-sha256-1"
        image: "asia-southeast1-docker.pkg.dev/recipe-shopper-5d242/recipee-shopping/project-frontend@sha256:f1379628a1ebd8818a093a1a039f85d5805c699a062ac1276db7bfa46cc2d5d4"
        resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "server-frontend-service"
  namespace: "backend"
  labels:
    app: "server-frontend"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    app: "server-frontend"
  type: "LoadBalancer"
  loadBalancerIP: ""
