k8s-manifests/setups/setup-api-server-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "server-api-1-service"
  namespace: "backend"
  labels:
    app: "server-api-1"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "server-api-1"
  type: "NodePort"
