k8s-manifests/setups/setup-api-server.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "server-api"
  namespace: "backend"
  labels:
    app: "server-api"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "server-api"
  template:
    metadata:
      labels:
        app: "server-api"
    spec:
      containers:
      - name: "project-backend-sha256-1"
        image: "asia-southeast1-docker.pkg.dev/recipe-shopper-5d242/recipee-shopping/project-backend@sha256:152239fafe8e162b01086b17a7ab61de8fc4c85bf84e807ecffa8b5f2aa2dfb8"
        resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "server-api-service"
  namespace: "backend"
  labels:
    app: "server-api"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "server-api"
  type: "ClusterIP"
