k8s-manifests/setups/setup-auth-server-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "server-auth-1-service"
  namespace: "backend"
  labels:
    app: "server-auth-1"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    app: "server-auth-1"
  type: "NodePort"
