k8s-manifests/setups/setup-auth-server.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "server-auth"
  namespace: "backend"
  labels:
    app: "server-auth"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "server-auth"
  template:
    metadata:
      labels:
        app: "server-auth"
    spec:
      containers:
      - name: "project-auth-sha256-1"
        image: "asia-southeast1-docker.pkg.dev/recipe-shopper-5d242/recipee-shopping/project-auth@sha256:e1039fe66a7f745f507f1b31dce6acef6004eaa953d6f79379c342e3c8f645d5"
        resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "server-auth-service"
  namespace: "backend"
  labels:
    app: "server-auth"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "server-auth"
  type: "ClusterIP"
