k8s-manifests/setups/setup-ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "recipee-apac-ingress"
  namespace: "backend"
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Assigning static IP to ingress - https://cloud.google.com/kubernetes-engine/docs/tutorials/configuring-domain-name-static-ip#use_an_ingress
    kubernetes.io/ingress.global-static-ip-name: recipee-ip-global
spec:
  defaultBackend:
    service:
      name: "server-frontend-1-service"
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: "/api/*"
            backend:
              service:
                name: "server-api-1-service"
                port:
                  number: 80
            pathType: "ImplementationSpecific"
          - path: "/auth/*"
            backend:
              service:
                name: "server-auth-1-service"
                port:
                  number: 80
            pathType: "ImplementationSpecific"
